fixed input for adding users being cut off, made request limit bigger

--- a/src/styles/home/Mainscreen/Notes/DisplayNotes.module.css
+++ b/src/styles/home/Mainscreen/Notes/DisplayNotes.module.css
@@ -99,8 +99,8 @@
 }
 
 .modal_content > img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .modal_content_actions > img {
